@@ -1,3 +1,7 @@
+2005-10-21 Kimmo
+ PATCH: [ 1329867 ] Manual: Improve Binary file FAQ
+  Manual: Faq.xml
+
 2005-09-20 Kimmo
  PATCH: [ 1295568 ] Manual: New Open-dialog screenshot
   Manual/screenshots: OpenDlg1.gif
